[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestration"
version = "1.0.0"
description = "Pipeline orchestration decorators for defining and executing data pipelines"
readme = "README.md"
authors = [
    {name = "Elijah Anderson", email = "elijahanderson96@gmail.com"},
]
license = "MIT"
packages = ["orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pipeline", "orchestration", "decorators"]
dependencies = [
    "typing-extensions>=4.0.0; python_version<'3.9'",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/orchestration"
Documentation = "https://github.com/yourusername/orchestration#readme"
Issues = "https://github.com/yourusername/orchestration/issues"
